--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -6,17 +6,17 @@ import Icon from './Icon.astro';
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="terminal-window" color="var(--accent-regular)" size="2.5rem" gradient />
 		<h2>Full Stack</h2>
-		<p>I am capable of integrating front and backend technologies, along with Databases and more technologies in order to accomplish a clean and effective aplication and web page.</p>
+		<p>I am capable of integrating front and backend technologies, along with Databases and more technologies in order to accomplish a clean and effective aplications and web pages.</p>
 	</div>
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="trophy" color="var(--accent-regular)" size="2.5rem" gradient />
 		<h2>leadership</h2>
-		<p>Managing workflows, delegation and tracking </p>
+		<p> I developed strong leadership skills in managing diverse, tech-focused teams. I learned to communicate effectively across cultures, lead projects using advanced technologies like AI and 5G, and drive innovation with a focus on real-world impact. </p>
 	</div>
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="strategy" color="var(--accent-regular)" size="2.5rem" gradient />
 		<h2>Strategy-Minded</h2>
-		<p>Urna porttitor rhoncus dolor purus non enim praesent ornare.</p>
+		<p>I cultivated a strategic mindset by learning to analyze complex challenges, plan innovative tech solutions, and align team efforts toward clear goals.</p>
 	</div>
 </section>
 
