--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -137,6 +137,11 @@ const isCurrentPage = (href: string) => {
 </script>
 
 <style>
+	.site-title:hover{
+		transform: scale(1.05);
+
+  transition: all 0.5s ease;
+	}
 	nav {
 		z-index: 9999;
 		position: relative;
@@ -211,6 +216,11 @@ const isCurrentPage = (href: string) => {
 		background-color: var(--gray-999);
 		border-bottom: 1px solid var(--gray-800);
 	}
+	.nav-items:hover{
+		transform: scale(1.05);
+  box-shadow: 0 0 20px rgba(4, 37, 37, 0.5);
+  transition: all 0.5s ease;
+	}
 
 	.link {
 		display: inline-block;
@@ -250,6 +260,12 @@ const isCurrentPage = (href: string) => {
 		transition: color var(--theme-transition);
 	}
 
+	.social:hover{
+		transform: scale(1.05);
+  
+  transition: all 0.5s ease;
+	}
+
 	.social:hover,
 	.social:focus {
 		color: var(--accent-text-over);
@@ -259,6 +275,10 @@ const isCurrentPage = (href: string) => {
 		display: flex;
 		align-items: center;
 		height: calc(var(--icon-size) + 2 * var(--icon-padding));
+	}
+	.theme-toggle:hover{
+		transform: scale(1.05);
+  transition: all 0.5s ease;
 	}
 
 	@media (min-width: 50em) {
