--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -14,14 +14,14 @@ const projects = (await getCollection('work')).sort(
 ---
 
 <BaseLayout
-	title="My Work | Jeanine White"
-	description="Learn about Jeanine White's most recent projects"
+	title="My Work | Walter Melendez"
+	description="Learn about Walter Melendez's most recent projects"
 >
 	<div class="stack gap-20">
 		<main class="wrapper stack gap-8">
 			<Hero
 				title="My Work"
-				tagline="See my most recent projects below to get an idea of my past experience."
+				tagline="Take a look at my most recent Experiences and Projects in order to know and familiarize more with my work."
 				align="start"
 			/>
 			<Grid variant="offset">
