--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -60,11 +60,11 @@ import Hero from '../components/Hero.astro';
 					width="500"
 					height="200"
 					 alt=""
-					 id="item1">
-					<img src="/public/assets/sids.jpg" class="card" alt=""
+					 >
+					<img src="/public/assets/sids.jpg"  alt=""
 					width="auto"
-					id="item2">
-					<img src="/public/assets/english.png" class="card" alt=""
+					>
+					<img src="/public/assets/english.png" alt=""
 					width="500"
 					height="600">
 				</div>
