--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -62,11 +62,12 @@ import Hero from '../components/Hero.astro';
 					 alt=""
 					 >
 					<img src="/public/assets/sids.jpg"  alt=""
-					width="auto"
+					width="500"
+					height="200"
 					>
 					<img src="/public/assets/english.png" alt=""
 					width="500"
-					height="600">
+					height="200">
 				</div>
 			</section>
 			<section>
