--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -59,13 +59,13 @@ import Hero from '../components/Hero.astro';
 					<img src="/public/assets/samsung.png" 
 					width="500"
 					height="200"
-					 alt=""
+					 alt="SAMSUNG"
 					 >
-					<img src="/public/assets/sids.jpg"  alt=""
+					<img src="/public/assets/sids.jpg"  alt="HUAWEI"
 					width="500"
 					height="200"
 					>
-					<img src="/public/assets/english.png" alt=""
+					<img src="/public/assets/english.png" alt="INGLES"
 					width="500"
 					height="200">
 				</div>
