absolute root images

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -54,18 +54,17 @@ import Hero from '../components/Hero.astro';
 				<div class="content ">
 					<p>some of my last courses
 						if you would like to know more about me click <a href="https://www.linkedin.com/in/walter-cortez-25536a326/">here to contact me</a>
-
 					</p>
-					<img src="/public/assets/samsung.png" 
+					<img src="/assets/samsung.png" 
 					width="500"
 					height="200"
 					 alt="SAMSUNG"
 					 >
-					<img src="/public/assets/sids.jpg"  alt="HUAWEI"
+					<img src="/assets/sids.jpg"  alt="HUAWEI"
 					width="500"
 					height="200"
 					>
-					<img src="/public/assets/english.png" alt="INGLES"
+					<img src="/assets/english.png" alt="INGLES"
 					width="500"
 					height="200">
 				</div>
